--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "just-getting-started",
     "version": "1.0.0",
     "orientation": "default",
-    "icon": ".app/assets/icon.png",
+    "icon": "../app/assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": ".app/assets/splash.png",
